consistently use javax.annotations annotations for Nullable and Nonnull (#1600)